# contracts/internal/agent-openapi.json
@@ -128,7 +128,9 @@
             "description": "Successful Response",
             "content": {
               "application/json": {
-                "schema": {}
+                "schema": {
+                  "$ref": "#/components/schemas/BuildAccepted"
+                }
               }
             }
           },
